# grvt-bot

./: .gitignore  ANTIGRAVITY_GUIDE.md  CONFIG_REFERENCE.md  INSTALLATION_VERIFIED.md  MODULAR_PACKAGE_COMPLETE.md  OPERATIONS_CHECKLIST.md  PAXG_STRATEGY_DOCS.md  PROJECT_OVERVIEW_TH.md  PROJECT_STRUCTURE.md  README.md  RUNBOOK.md  check_history.py  pyproject.toml  requirements.txt  setup.py  validate_strategy.py
.agent/workflows/: README.md  trading-strategy-builder.md
.github/workflows/: ci.yml
config/: config.example.yaml
docs/: INDEX.md  MIGRATION.md  SKILL.md
grvt_bot/: __init__.py
grvt_bot/cli/: __init__.py  main.py
grvt_bot/core/: __init__.py  alerts.py  config.py  executor.py  risk.py  runtime_lock.py  state.py
grvt_bot/strategies/: __init__.py  base.py  paxg_mean_reversion_strategy.py  random_strategy.py
grvt_bot/utils/: __init__.py  logger.py
legacy/: LEVERAGE_FIX.md  README.md  README_TH_old.md  README_old.md  check_leverage.py  config.py  execution.py  main.py  trading_logic.py
scripts/: check_leverage.py
strategies/: paxg_mean_reversion_strategy.py
tests/: __init__.py  conftest.py  test_cli_schedule.py  test_config_manager.py  test_executor_close_adaptive.py  test_executor_reference.py  test_integration.py  test_risk_engine.py  test_runtime_lock.py  test_state_store.py
