[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "grvt-bot"
version = "1.0.0"
description = "Modular trading bot for GRVT Exchange"
readme = "README.md"
authors = [
    {name = "GRVT Bot Team"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "eth_account>=0.5.9",
    "requests>=2.28.0",
    "simplejson>=3.17.0",
    "pyyaml>=6.0",
    "grvt-pysdk @ git+https://github.com/gravity-technologies/grvt-pysdk.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.scripts]
grvt-bot = "grvt_bot.cli.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/grvt-bot"
Documentation = "https://github.com/yourusername/grvt-bot/blob/main/README.md"
Repository = "https://github.com/yourusername/grvt-bot"

[tool.setuptools]
packages = ["grvt_bot", "grvt_bot.core", "grvt_bot.strategies", "grvt_bot.utils", "grvt_bot.cli"]

[tool.setuptools.package-data]
grvt_bot = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=grvt_bot --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
